--- a/platformio.ini
+++ b/platformio.ini
@@ -14,3 +14,6 @@ board = esp12e
 framework = arduino
 upload_port = "/dev/ttyUSB0"
 monitor_speed = 115200
+lib_deps_external =
+   RadioHead
+   ESP Async WebServer
